tests/cases/traits/ok/trait-method-call.ari
impl Eq[i64] for i64 {
  fn eq(self, other: i64) -> bool {
    self == other
  }
}

fn main() -> i64 {
  let value = 7;
  if value.eq(7) {
    0
  } else {
    1
  }
}
