tests/cases/traits/errors/trait-impl-return-mismatch.ari
trait Show[T] {
  fn show(self) -> i64
}

impl Show[i64] for i64 {
  fn show(self) -> bool {
    return true;
  }
}

fn main() -> i64 {
  return 0;
}
